# PyAutoSTM

./: LICENSE.txt  MANIFEST.in  Nanonis-Session.ini  README.MD  README.md  autoSTM.py  requirements.txt  setup.cfg  setup.py  sim_test.py  stmmap.py  tcp.py  tcp_commands.py  unnamed0001.sxm  unnamed0002.sxm  unnamed0003.sxm  unnamed0004.sxm  unnamed0005.sxm  unnamed0006.sxm  unnamed0007.sxm  unnamed0008.sxm  unnamed0009.sxm
AutoAssemble/image_processing/: STMimaging.py  astar.py  stmutils.py
docs/: index.rst
examples/: 11nov_example.py
sample/: Topo093.sxm  Topo101.sxm  Topo102.sxm  Topo104.sxm  Topo109.sxm
sample2/: Topo002.sxm  Topo003.sxm  Topo004.sxm  Topo005.sxm  Topo006.sxm  Topo007.sxm  Topo008.sxm  Topo009.sxm  Topo010.sxm  Topo014.sxm  Topo015.sxm  Topo016.sxm  Topo017.sxm  Topo018.sxm  Topo019.sxm  Topo020.sxm  Topo021.sxm  Topo022.sxm  Topo024.sxm  Topo027.sxm  Topo028.sxm  Topo029.sxm  Topo030.sxm  Topo031.sxm  Topo032.sxm  Topo033.sxm  Topo034.sxm  Topo035.sxm  Topo036.sxm  Topo037.sxm  Topo038.sxm  Topo039.sxm  Topo040.sxm  Topo043.sxm  Topo045.sxm  Topo060.sxm  Topo064.sxm  Topo091.sxm  Topo096.sxm  Topo106.sxm  (+22 more)
src/: sim_test.py  stmmap.py
src/PyAutoSTM/: Cs_test-1.py  autocmd.py  sim_test-1.py  sim_test-2.py  sim_test.py  stmmap.py  tcp.py
src/PyAutoSTM/autoutils/: assignment.py  astar.py  new_astar.py  old_astar.py  planner.py  stmimaging.py
src/PyAutoSTM/imgsim/: basic_image.py  scattered_image.py
src/autoutils/: __init__.py
src/utils/: KMA_T2.py  assignment.py
utils/: KMA_T2.py  astar.py
