[metadata]
name = <PyAutoSTM>
version = <0.0.1>
license = <MIT>
description = <Library for automating assembly of CO patterns in STM>
long_description = file: README.MD
author = <Juwan Jeremy T. Jacobe>
author_email = <jjacobe2@nd.edu>

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src